@@ -1,6 +1,7 @@
 2.15.0-dev
 -------------------
 * 72595456 - Search by post code and Divorce returns insufficient results
+* 73616878 - DX number relocation
 
 2.14.0
 -------------------
